need to debug summary page when portfolio empty

--- a/my_breadth/templates/portfolio.html
+++ b/my_breadth/templates/portfolio.html
@@ -9,12 +9,12 @@
     <div class="container">
 
         <div class="row">
-            {% if not portfolio_1_name == "none" %}
+            {% if not portfolio1_name == "none" %}
             <div class="col-md-4">
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th scope="col">{{ portfolio_1_name }}</th>
+                            <th scope="col">{{ portfolio1_name }}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -31,12 +31,12 @@
                 </table>
             </div>
             {% endif %}
-            {% if not portfolio_2_name == "none" %}
+            {% if not portfolio2_name == "none" %}
             <div class="col-md-4">
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th scope="col">{{ portfolio_2_name }}</th>
+                            <th scope="col">{{ portfolio2_name }}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -53,12 +53,12 @@
                 </table>
             </div>
             {% endif %}
-            {% if not portfolio_3_name == "none" %}
+            {% if not portfolio3_name == "none" %}
             <div class="col-md-4">
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th scope="col">{{ portfolio_3_name }}</th>
+                            <th scope="col">{{ portfolio3_name }}</th>
                         </tr>
                     </thead>
                     <tbody>
