--- a/my_breadth/templates/summary.html
+++ b/my_breadth/templates/summary.html
@@ -17,28 +17,28 @@
         </thead>
         <tbody>
                 <tr>
-                    <th scope="row">Sectors</th>
-                    <td class="table-danger">{{ sec_twenty }}</td>
-                    <td class="table-danger">{{ sec_ten }}</td>
-                    <td>{{ sec_forty }}</td>
+                    <th scope="row">{{ portfolio1_name }}</th>
+                    <td class="table-danger">{{ portfolio1_ema20_summary }}</td>
+                    <td class="table-danger">{{ portfolio1_sma50_summary }}</td>
+                    <td>{{ portfolio1_sma200_summary }}</td>
                 </tr>
                 <tr>
-                    <th scope="row">Industries</th>
-                    <td class="table-danger">{{ ind_twenty }}</td>
-                    <td class="table-warning">{{ ind_ten }}</td>
-                    <td>{{ ind_forty }}</td>
+                    <th scope="row">{{ portfolio2_name }}</th>
+                    <td class="table-danger">{{ portfolio2_ema20_summary }}</td>
+                    <td class="table-warning">{{ portfolio2_sma50_summary }}</td>
+                    <td>{{ portfolio2_sma200_summary }}</td>
                 </tr>
                 <tr>
-                    <th scope="row">Sub-Sectors</th>
-                    <td class="table-danger">{{ sub_sec_twenty }}</td>
-                    <td class="table-danger">{{ sub_sec_ten }}</td>
-                    <td>{{ sub_sec_forty }}</td>
+                    <th scope="row">{{ portfolio3_name }}</th>
+                    <td class="table-danger">{{ portfolio3_ema20_summary }}</td>
+                    <td class="table-danger">{{ portfolio3_sma50_summary }}</td>
+                    <td>{{ portfolio3_sma200_summary }}</td>
                 </tr>
                 <tr>
                     <th scope="row">Total</th>
-                    <td class="table-danger">{{ total_twenty }}</td>
-                    <td class="table-danger">{{ total_ten }}</td>
-                    <td>{{ total_forty }}</td>
+                    <td class="table-danger">{{ total_ema20 }}</td>
+                    <td class="table-danger">{{ total_sma50 }}</td>
+                    <td>{{ total_sma200 }}</td>
                 </tr>
         </tbody>
     </table>
