--- a/my_breadth/templates/detail.html
+++ b/my_breadth/templates/detail.html
@@ -5,48 +5,139 @@
 {% endblock %}
 
 {% block main %}
-    <h1 style="text-align: center;">Detail</h1>
-    <div class="container">
-        <h2>{{ portfolio1_name }}</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <table class="table table-bordered">
-                    <thead>
+<h1 style="text-align: center;">Detail</h1>
+<div class="container">
+    <div class="row">
+        {% if not portfolio1_name == "none" %}
+        <div class="col-md-4">
+            <h2>{{ portfolio1_name }}</h2>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Above 20EMA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for stock in portfolio1_ema20 %}
                         <tr>
-                            <th scope="col">Above 20EMA</th>
+                            <td>
+                                {{ stock }}
+                            </td>
                         </tr>
-                    </thead>
-                    <tbody>
-                            {% for stock in portfolio1_ema20 %}
-                            <tr>
-                                <td>
-                                    {{ stock }}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-4">
-                <table class="table table-bordered">
-                    <thead>
+                        {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
+        {% if not portfolio2_name == "none" %}
+        <div class="col-md-4">
+            <h2>{{ portfolio2_name }}</h2>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Above 20EMA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for stock in portfolio2_ema20 %}
                         <tr>
-                            <th scope="col">Above 50SMA</th>
+                            <td>
+                                {{ stock }}
+                            </td>
                         </tr>
-                    </thead>
-                    <tbody>
-                            {% for stock in portfolio1_sma50 %}
-                            <tr>
-                                <td>
-                                    {{ stock }}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-4">
-                <table class="table table-bordered">
+                        {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
+        {% if not portfolio3_name == "none" %}
+        <div class="col-md-4">
+            <h2>{{ portfolio3_name }}</h2>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Above 20EMA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for stock in portfolio3_ema20 %}
+                        <tr>
+                            <td>
+                                {{ stock }}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
+    </div>
+    <div class="row">
+        {% if not portfolio1_name == "none" %}
+        <div class="col-md-4">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Above 50SMA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for stock in portfolio1_sma50 %}
+                        <tr>
+                            <td>
+                                {{ stock }}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
+        {% if not portfolio2_name == "none" %}
+        <div class="col-md-4">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Above 50SMA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for stock in portfolio2_sma50 %}
+                        <tr>
+                            <td>
+                                {{ stock }}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
+        {% if not portfolio3_name == "none" %}
+        <div class="col-md-4">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Above 50SMA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for stock in portfolio3_sma50 %}
+                        <tr>
+                            <td>
+                                {{ stock }}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
+    </div>
+    <div class="row">
+        {% if not portfolio1_name == "none" %}
+        <div class="col-md-4">
+            <table class="table table-bordered">
                     <thead>
                         <tr>
                             <th scope="col">Above 200SMA</th>
@@ -61,128 +152,49 @@
                             </tr>
                             {% endfor %}
                     </tbody>
-                </table>
-            </div>
+            </table>
         </div>
-    </div>
-
-
-    <div class="container">
-        <h2>{{ portfolio2_name }}</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <table class="table table-bordered">
-                    <thead>
+        {% endif %}
+        {% if not portfolio2_name == "none" %}
+        <div class="col-md-4">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Above 200SMA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for stock in portfolio2_sma200 %}
                         <tr>
-                            <th scope="col">Above 20EMA</th>
+                            <td>
+                                {{ stock }}
+                            </td>
                         </tr>
-                    </thead>
-                    <tbody>
-                            {% for stock in portfolio2_ema20 %}
-                            <tr>
-                                <td>
-                                    {{ stock }}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-4">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th scope="col">Above 50SMA</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                            {% for stock in portfolio2_sma50 %}
-                            <tr>
-                                <td>
-                                    {{ stock }}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-4">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th scope="col">Above 200SMA</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                            {% for stock in portfolio2_sma200 %}
-                            <tr>
-                                <td>
-                                    {{ stock }}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+                        {% endfor %}
+                </tbody>
+            </table>
         </div>
-    </div>
-    <div class="container">
-        <h2>{{ portfolio3_name }}</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <table class="table table-bordered">
-                    <thead>
+        {% endif %}
+        {% if not portfolio3_name == "none" %}
+        <div class="col-md-4">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Above 200SMA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for stock in portfolio3_sma200 %}
                         <tr>
-                            <th scope="col">Above 20EMA</th>
+                            <td>
+                                {{ stock }}
+                            </td>
                         </tr>
-                    </thead>
-                    <tbody>
-                            {% for stock in portfolio3_ema20 %}
-                            <tr>
-                                <td>
-                                    {{ stock }}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-4">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th scope="col">Above 50SMA</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                            {% for stock in portfolio3_sma50 %}
-                            <tr>
-                                <td>
-                                    {{ stock }}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-4">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th scope="col">Above 200SMA</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                            {% for stock in portfolio3_sma200 %}
-                            <tr>
-                                <td>
-                                    {{ stock }}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+                        {% endfor %}
+                </tbody>
+            </table>
         </div>
+        {% endif %}
     </div>
+</div>
 {% endblock %}
