--- a/my_breadth/templates/layout.html
+++ b/my_breadth/templates/layout.html
@@ -25,6 +25,7 @@
                         <a class="nav-link" href="/portfolio">Portfolio</a>
                         <a class="nav-link" href="/summary">Summary</a>
                         <a class="nav-link" href="/detail">Detail</a>
+                        <a class="nav-link" href="/create-portfolio">Create Portfolio</a>
                     </div>
                     <div class="navbar-nav ms-auto mt-2">
                         <a class="nav-link" href="/logout">Logout</a>
