--- a/my_breadth/templates/create-portfolio.html
+++ b/my_breadth/templates/create-portfolio.html
@@ -26,42 +26,42 @@
 
             <div class="text-center">
               <label class="form-label"><b>Equity 1</b></label>
-              <input type="symbol1" id="symbol1" class="form-control" placeholder="symbol" name="symbol1">
+              <input type="text" id="symbol1" class="form-control" placeholder="symbol" name="symbols[]">
             </div>
             <div class="text-center">
-              <input type="exchange1" id="exchange1" class="form-control" placeholder="exchange" name="exchange1">
+              <input type="text" id="exchange1" class="form-control" placeholder="exchange" name="exchanges[]">
             </div>
 
             <div class="text-center">
               <label class="form-label"><b>Equity 2</b></label>
-              <input type="symbol2" id="symbol2" class="form-control" placeholder="symbol" name="symbol2">
+              <input type="text" id="symbol2" class="form-control" placeholder="symbol" name="symbols[]">
             </div>
             <div class="text-center">
-              <input type="exchange2" id="exchange2" class="form-control" placeholder="exchange" name="exchange2">
+              <input type="text" id="exchange2" class="form-control" placeholder="exchange" name="exchanges[]">
             </div>
 
             <div class="text-center">
               <label class="form-label"><b>Equity 3</b></label>
-              <input type="symbol3" id="symbol3" class="form-control" placeholder="symbol" name="symbol3">
+              <input type="text" id="symbol3" class="form-control" placeholder="symbol" name="symbols[]">
             </div>
             <div class="text-center">
-              <input type="exchange3" id="exchange3" class="form-control" placeholder="exchange" name="exchange3">
+              <input type="text" id="exchange3" class="form-control" placeholder="exchange" name="exchanges[]">
             </div>
 
             <div class="text-center">
               <label class="form-label"><b>Equity 4</b></label>
-              <input type="symbol4" id="symbol4" class="form-control" placeholder="symbol" name="symbol4">
+              <input type="text" id="symbol4" class="form-control" placeholder="symbol" name="symbols[]">
             </div>
             <div class="text-center">
-              <input type="exchange4" id="exchange4" class="form-control" placeholder="exchange" name="exchange4">
+              <input type="text" id="exchange4" class="form-control" placeholder="exchange" name="exchanges[]">
             </div>
 
             <div class="text-center">
               <label class="form-label"><b>Equity 5</b></label>
-              <input type="symbol5" id="symbol5" class="form-control" placeholder="symbol" name="symbol5">
+              <input type="text" id="symbol5" class="form-control" placeholder="symbol" name="symbols[]">
             </div>
             <div class="text-center">
-              <input type="exchange5" id="exchange5" class="form-control" placeholder="exchange" name="exchange5">
+              <input type="text" id="exchange5" class="form-control" placeholder="exchange" name="exchanges[]">
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-primary mb-3" style="width: 100px;">Create</button>
