--- a/my_breadth/templates/apology.html
+++ b/my_breadth/templates/apology.html
@@ -5,9 +5,10 @@
 {% endblock %}
 
 {% block main %}
-    <h1>{{ top }}</h1>
+    <h1 style="text-align: center; margin-bottom: 1em;">ERROR Creating Portfolio</h1>
+    <div style="text-align: center; margin-bottom: 2em;">
+        Must include correct pair for symbol and exchange according to <a href="https://tvdb.brianthe.dev">TradingView List</a>
+    </div>
     <br>
-    <br>
-    <br>
-    <h5>{{ bottom }}</h5>
+    <h5 style="text-align: center;">{{ bottom }}</h5>
 {% endblock %}
