--- a/my_breadth/templates/create-portfolio.html
+++ b/my_breadth/templates/create-portfolio.html
@@ -5,19 +5,38 @@
 {% endblock %}
 
 {% block main %}
+<script>
+  function validateForm() {
+    var inputField1 = document.getElementById("portfolio");
+    var selectField1 = document.getElementById("portfolio_id");
+    var inputValue1 = inputField1.value.trim();
+    var selectValue1 = selectField1.value;
+
+    if (inputValue1 === "") {
+      alert("Please provide a Portfolio name.");
+      return false;
+    }
+
+    if (selectValue1 === "") {
+      alert("Please choose a Portfolio # from the dropdown list.");
+      return false;
+    }
+  }
+</script>
 <div class="container text-center">
     <div class="row justify-content-md-left">
       <div class="col-md-auto"></div>
       <div class="col col-lg-2" style="margin-top: 50px;">
 
-        <form action="/create-portfolio" method="POST">
+        <form action="/create-portfolio" onsubmit="return validateForm();" method="POST">
           <div class="row g-3 align-items-center">
 
             <div class="text-center">
               <label for="inputPassword5" class="form-label"><b>Portfolio Name</b></label>
               <input type="portfolio" id="portfolio" class="form-control" placeholder="portfolio name" name="portfolio">
-              <select class="form-select" aria-label="Default select example" name="portfolio_id">
-                <option selected>portfolio #</option>
+              <label for="selectField" class="form-label"><b>Portfolio #</b></label>
+              <select class="form-select" aria-label="Default select example" id="portfolio_id" name="portfolio_id">
+                <option selected></option>
                 <option value="portfolio1">Portfolio 1</option>
                 <option value="portfolio2">Portfolio 2</option>
                 <option value="portfolio3">Portfolio 3</option>
