--- a/my_breadth/templates/error-page.html
+++ b/my_breadth/templates/error-page.html
@@ -1,9 +1,12 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Home
+    Error
 {% endblock %}
 
 {% block main %}
-    <h1>ERROR</h1>
+    <h1 style="text-align: center; margin-bottom: 1em;">ERROR Creating Portfolio</h1>
+    <div style="text-align: center; margin-bottom: 2em;">
+        Must include correct pair for symbol and exchange according to <a href="https://tvdb.brianthe.dev">TradingView List</a>
+    </div>
 {% endblock %}
