--- a/my_breadth/templates/create-portfolio.html
+++ b/my_breadth/templates/create-portfolio.html
@@ -23,6 +23,7 @@
     }
   }
 </script>
+<h5 style="color: red; text-align: center;">{{ problem }}</h5>
 <div class="container text-center">
     <div class="row justify-content-md-left">
       <div class="col-md-auto"></div>
