--- a/my_breadth/templates/register.html
+++ b/my_breadth/templates/register.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+<h5 style="color: red; text-align: center;">{{ problem }}</h5>
 <div class="container text-center">
     <div class="row justify-content-md-center">
       <div class="col-md-auto"></div>
@@ -17,7 +18,10 @@
               <input autocomplete="off" type="username" id="username" class="form-control" placeholder="username" name="username">
             </div>
             <div class="text-center">
-              <input autocomplete="off" type="password" id="inputPassword6" class="form-control" placeholder="password" name="password">
+              <input autocomplete="off" type="password" id="password" class="form-control" placeholder="password" name="password">
+            </div>
+            <div class="text-center">
+              <input autocomplete="off" type="password" id="confirmpassword" class="form-control" placeholder=" confirm password" name="confirmpassword">
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-primary mb-3" style="width: 100px;">Register</button>
