About to update Edit to all portfolios

--- a/my_breadth/templates/layout.html
+++ b/my_breadth/templates/layout.html
@@ -41,7 +41,7 @@
         </nav>
         <main>{% block main %}{% endblock %}</main>
 
-        <footer class="mb-5 small text-center text-muted">
+        <footer class="mb-5 small text-center text-muted" style="margin-top: 40px;">
             Nothing on this website should be considered financial advice. Please consult a financial advisor for investment related questions.
             <br>
             Data provided by <a href="https://www.tradingview.com/">TradingView</a>
