--- a/my_breadth/templates/index.html
+++ b/my_breadth/templates/index.html
@@ -5,5 +5,21 @@
 {% endblock %}
 
 {% block main %}
-    <h1>Welcome Home</h1>
+
+<div class="container text-center">
+    <div class="row">
+        <div class="col">
+            <h1 style="margin: 20px;">Welcome to my.Breadth</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+                Here you can create portfolios with equity securities listed on any american 
+                exchange and run them through the application to see the current healthiness 
+                of those portfolios based on breadth.
+        </div>
+        <div class="col-3"></div>
+    </div>
 {% endblock %}
