--- a/my_breadth/templates/portfolio.html
+++ b/my_breadth/templates/portfolio.html
@@ -37,7 +37,10 @@
             {% endif %}
             {% if not portfolio2_name == "none" %}
             <div class="col-md-4">
-                <h1>Edit Button</h1>
+                <div class="text-center">
+                    <a href="/add-portfolio2" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
+                    <a href="/delete-portfolio2" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
+                </div>
                 <table class="table table-bordered">
                     <thead>
                         <tr>
@@ -60,7 +63,10 @@
             {% endif %}
             {% if not portfolio3_name == "none" %}
             <div class="col-md-4">
-                <h1>Edit Button</h1>
+                <div class="text-center">
+                    <a href="/add-portfolio3" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
+                    <a href="/delete-portfolio3" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
+                </div>
                 <table class="table table-bordered">
                     <thead>
                         <tr>
