TradingView completely removed

--- a/my_breadth/templates/layout.html
+++ b/my_breadth/templates/layout.html
@@ -44,7 +44,7 @@
         <footer class="mb-5 small text-center text-muted" style="margin-top: 40px;">
             Nothing on this website should be considered financial advice. Please consult a financial advisor for investment related questions.
             <br>
-            Data provided by <a href="https://www.tradingview.com/">TradingView</a>
+            Data provided by <a href="https://legal.yahoo.com/us/en/yahoo/terms/product-atos/apiforydn/index.html">Yahoo! Finance API</a>
         </footer>
 
     </body>
