--- a/my_breadth/templates/portfolio.html
+++ b/my_breadth/templates/portfolio.html
@@ -13,7 +13,7 @@
             <div class="col-md-4">
                 <div class="text-center">
                     <a href="/add-portfolio1" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
-                    <a href="/delete-portfolio1" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
+                    <a href="/delete-portfolio/1" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
                 </div>
                 <table class="table table-bordered">
                     <thead>
@@ -23,10 +23,10 @@
                     </thead>
                     <tbody>
                             {% for stock in investments %}
-                            {% if stock[3] == "portfolio1" %}
+                            {% if stock[4] == "portfolio1" %}
                             <tr>
                                 <td>
-                                    {{ stock[1] }}
+                                    ({{ stock[1] }}) {{ stock[2] }}
                                 </td>
                             </tr>
                             {% endif %}
@@ -39,7 +39,7 @@
             <div class="col-md-4">
                 <div class="text-center">
                     <a href="/add-portfolio2" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
-                    <a href="/delete-portfolio2" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
+                    <a href="/delete-portfolio/2" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
                 </div>
                 <table class="table table-bordered">
                     <thead>
@@ -49,10 +49,10 @@
                     </thead>
                     <tbody>
                             {% for stock in investments %}
-                            {% if stock[3] == "portfolio2" %}
+                            {% if stock[4] == "portfolio2" %}
                             <tr>
                                 <td>
-                                    {{ stock[1] }}
+                                    ({{ stock[1] }}) {{ stock[2] }}
                                 </td>
                             </tr>
                             {% endif %}
@@ -65,7 +65,7 @@
             <div class="col-md-4">
                 <div class="text-center">
                     <a href="/add-portfolio3" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
-                    <a href="/delete-portfolio3" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
+                    <a href="/delete-portfolio/3" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
                 </div>
                 <table class="table table-bordered">
                     <thead>
@@ -75,10 +75,10 @@
                     </thead>
                     <tbody>
                             {% for stock in investments %}
-                            {% if stock[3] == "portfolio3" %}
+                            {% if stock[4] == "portfolio3" %}
                             <tr>
                                 <td>
-                                    {{ stock[1] }}
+                                    ({{ stock[1] }}) {{ stock[2] }}
                                 </td>
                             </tr>
                             {% endif %}
