Details pg updated with symbol names!

--- a/my_breadth/templates/detail.html
+++ b/my_breadth/templates/detail.html
@@ -21,7 +21,7 @@
                         {% for stock in portfolio1_ema20 %}
                         <tr>
                             <td>
-                                {{ stock }}
+                                ({{ stock[0] }}) {{ stock[1] }}
                             </td>
                         </tr>
                         {% endfor %}
@@ -42,7 +42,7 @@
                         {% for stock in portfolio2_ema20 %}
                         <tr>
                             <td>
-                                {{ stock }}
+                                ({{ stock[0] }}) {{ stock[1] }}
                             </td>
                         </tr>
                         {% endfor %}
@@ -63,7 +63,7 @@
                         {% for stock in portfolio3_ema20 %}
                         <tr>
                             <td>
-                                {{ stock }}
+                                ({{ stock[0] }}) {{ stock[1] }}
                             </td>
                         </tr>
                         {% endfor %}
@@ -85,7 +85,7 @@
                         {% for stock in portfolio1_sma50 %}
                         <tr>
                             <td>
-                                {{ stock }}
+                                ({{ stock[0] }}) {{ stock[1] }}
                             </td>
                         </tr>
                         {% endfor %}
@@ -105,7 +105,7 @@
                         {% for stock in portfolio2_sma50 %}
                         <tr>
                             <td>
-                                {{ stock }}
+                                ({{ stock[0] }}) {{ stock[1] }}
                             </td>
                         </tr>
                         {% endfor %}
@@ -125,7 +125,7 @@
                         {% for stock in portfolio3_sma50 %}
                         <tr>
                             <td>
-                                {{ stock }}
+                                ({{ stock[0] }}) {{ stock[1] }}
                             </td>
                         </tr>
                         {% endfor %}
@@ -147,7 +147,7 @@
                             {% for stock in portfolio1_sma200 %}
                             <tr>
                                 <td>
-                                    {{ stock }}
+                                    ({{ stock[0] }}) {{ stock[1] }}
                                 </td>
                             </tr>
                             {% endfor %}
@@ -167,7 +167,7 @@
                         {% for stock in portfolio2_sma200 %}
                         <tr>
                             <td>
-                                {{ stock }}
+                                ({{ stock[0] }}) {{ stock[1] }}
                             </td>
                         </tr>
                         {% endfor %}
@@ -187,7 +187,7 @@
                         {% for stock in portfolio3_sma200 %}
                         <tr>
                             <td>
-                                {{ stock }}
+                                ({{ stock[0] }}) {{ stock[1] }}
                             </td>
                         </tr>
                         {% endfor %}
