--- a/my_breadth/templates/delete-portfolio3.html
+++ b/my_breadth/templates/delete-portfolio3.html
@@ -10,7 +10,7 @@
 
         <div class="row">
             <div class="col-md-4">
-                <form action="/delete-portfolio3" method="POST">
+                <form action="/delete-portfolio" method="POST">
                 <table class="table table-bordered">
                     <thead>
                         <tr>
@@ -19,13 +19,14 @@
                     </thead>
                     <tbody>
                             {% for stock in investments %}
-                            {% if stock[5] == "portfolio3" %}
+                            {% if stock[4] == "portfolio3" %}
                             <tr>
                                 <td>
                                     <div class="form-check">
+                                        <input type="hidden" name="id" value="3">
                                         <input class="form-check-input" type="checkbox" value= "{{ stock[1] }}" id="symbol", name="symbols[]">
                                         <label class="form-check-label" for="symbol">
-                                          {{ stock[1] }}
+                                            ({{ stock[1] }}) {{ stock[2] }}
                                         </label>
                                       </div>
                                 </td>
