Add pages consolidated. Now checking for duplicate tickers in db

--- a/my_breadth/templates/add-portfolio.html
+++ b/my_breadth/templates/add-portfolio.html
@@ -12,7 +12,7 @@
       <div class="col-md-auto"></div>
       <div class="col col-lg-2" style="margin-top: 50px;">
 
-        <form action="/add-portfolio3" method="POST">
+        <form action="/add-portfolio" method="POST">
           <div class="row g-3 align-items-center">
 
             <div class="text-center">
