--- a/my_breadth/templates/portfolio.html
+++ b/my_breadth/templates/portfolio.html
@@ -12,7 +12,7 @@
             {% if not portfolio1_name == "none" %}
             <div class="col-md-4">
                 <div class="text-center">
-                    <a href="/add-portfolio1" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
+                    <a href="/add-portfolio/1" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
                     <a href="/delete-portfolio/1" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
                 </div>
                 <table class="table table-bordered">
@@ -38,7 +38,7 @@
             {% if not portfolio2_name == "none" %}
             <div class="col-md-4">
                 <div class="text-center">
-                    <a href="/add-portfolio2" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
+                    <a href="/add-portfolio/2" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
                     <a href="/delete-portfolio/2" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
                 </div>
                 <table class="table table-bordered">
@@ -64,7 +64,7 @@
             {% if not portfolio3_name == "none" %}
             <div class="col-md-4">
                 <div class="text-center">
-                    <a href="/add-portfolio3" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
+                    <a href="/add-portfolio/3" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Add</a>
                     <a href="/delete-portfolio/3" class="btn btn-primary mb-3" style="width: 100px; margin: 5px;">Delete</a>
                 </div>
                 <table class="table table-bordered">
